Added tasks to install and configure Node-RED.

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,1 +1,8 @@
 ---
+- name: Restart the nodered service.
+  systemd:
+    name: nodered.service
+    state: restarted
+  tags:
+    - molecule-idempotence-notest
+  when: nodered_service and not nodered_service_started_result.changed
