--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
-# - name: Execute distribution dependent setup.
-#   include_tasks: "{{ item }}"
-#   with_first_found:
-#     - "{{ ansible_distribution|lower }}-{{ ansible_distribution_major_version|lower }}.yml"
-#     - "{{ ansible_distribution|lower }}.yml"
-#     - "{{ ansible_os_family|lower }}.yml"
+- name: Execute distribution dependent setup.
+  include_tasks: "{{ item }}"
+  with_first_found:
+    - "{{ ansible_distribution|lower }}-{{ ansible_distribution_major_version|lower }}.yml"
+    - "{{ ansible_distribution|lower }}.yml"
+    - "{{ ansible_os_family|lower }}.yml"
 
 - name: Create the Node-RED user.
   user:
