Added option to backup config file.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,3 +6,4 @@ nodered_user_shell: /bin/bash
 nodered_user_sudo: false
 nodered_args:
 nodered_node_args: --max-old-space-size=128
+nodered_config_backup: false
